@@ -41,6 +41,7 @@ ViSP 3.0.1 (in development)
     . [#59] Unable to use visp-config or visp-config.bat to build a project
             without CMake
     . [#68] Visual C++ 2010 unable to build modules\core\test\math\testMath.cpp
+    . [#69] Unable to build ViSP under Windows without OpenCV 3rdparty
 
 ----------------------------------------------
 ViSP 3.0.0 (released December 18th, 2015)
